--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in version 1.1.4
+
+o diacritic characters bug fux in `qwerty.dist`
+
+o temporary bug fix in `correct.changes` (see code)
+
+
 Changes in version 1.1.3
 
 o fixed fatal bug in `correct.changes`
