diacritic character bug fix for Macs

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ o temporary bug fix in `correct.changes` (see code)
 
 o removed progress bar for Macs and Linux -- will work on progress bar solution at a later time
 
+o fixed diacritic character error for Macs
+
 
 Changes in version 1.1.3
 
