bug fix for `equate` and `pluralize`

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in version 1.1.5
+
+o FIX: `read.data` bug for .csv files
+
+o FIX: NA bug in `textcleaner`
+
+o ADD: `resp2bin` converts response matrix to binary response matrix
+
+o FIX: naming output in `equate` function
+
+o FIX: `pluralize` handling of words ending in 'ion'
+
+
 Changes in version 1.1.4
 
 o diacritic characters bug fux in `qwerty.dist`
