--- a/vignettes/Preprocessing.Rmd
+++ b/vignettes/Preprocessing.Rmd
@@ -93,7 +93,7 @@ Next, the reader will be prompted when `textcleaner` attempts to parse the respo
 
 Most responses are fairly easy to determine the word the participant intended with the offered responses; however, there are instances where it's impossible to know exactly what the participant intended. An example of this is in the next prompt: `dog cat <<mose>> moose horse lion tiger bear dear doe pig cow` (Figure 5).
 
-Here, the first three response options: `1:mole`, `2:moose`, and `3:mouse` are equally plausible. On the one hand, it's unlikely the participant intended to type *mole* because the "s" and "l" keys are quite distant from one another (QWERTY distance = `r SemNetCleaner::qwerty.dist("mose","mole")`). On the other hand, it's hard to know whether the participant intended to type *moose* or *mouse*. The next response in the string is *moose*, which could mean that the participant attempted to correct their initial response; however, there is no way of knowing for certain. In these instances, our recommendation is to err on the conservative side---that is, to not include the response in the final results. To do so, the user can type `14` for `14:BAD RESPONSE` and press `ENTER`, which will remove the response from the final results.
+Here, the first three response options: `1:mole`, `2:moose`, and `3:mouse` are equally plausible. On the one hand, it's unlikely the participant intended to type *mole* because the "s" and "l" keys are quite distant from one another. On the other hand, it's hard to know whether the participant intended to type *moose* or *mouse*. The next response in the string is *moose*, which could mean that the participant attempted to correct their initial response; however, there is no way of knowing for certain. In these instances, our recommendation is to err on the conservative side---that is, to not include the response in the final results. To do so, the user can type `14` for `14:BAD RESPONSE` and press `ENTER`, which will remove the response from the final results.
 
 The reader can continue through the next ten prompts using the response options that have been covered. Below is a table with the response options we selected for these prompts:
 
